Add .env file from example

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 WANDB_API_KEY=
-CSM_REPO_PATH=
+CSM_REPO_PATH=/content/csm
 MIMI_SAMPLE_RATE=24000
 BACKBONE_FLAVOR=llama-1B
 DECODER_FLAVOR=llama-100M
